--- a/index.html
+++ b/index.html
@@ -6,47 +6,30 @@
 
     <style type="text/css">
         *{margin:0;padding: 0;}
-        body{background-color: silver;text-indent:14px;font-family: "Times New Roman";margin: 0;padding: 0;}
+        body{background-color: silver;text-indent:14px;font-family: "Times New Roman";}
         h1{text-align: center;}
-        h2{background-color:#999;}
-        div{font-size: 16px;background-color: deepskyblue;}
+        h2{background-color: aquamarine;}
+        div{font-size: 16px;}
         table{width:400px;height: 40px;}
-        p{text-indent: 2em;line-height: 2em;}
-        li{line-height: 2em;}
-        .image,.myname{text-align: center}
-        .top{height: 260px;margin-top: 30px;}
-        .mian{width:820px;margin: 0 auto;}
-        .left{width:397px;height: 200px;position: absolute;top:290px;left: 270px;}
-        .right{width:397px;height:200px;float: right;}
-        .foot{width: 800px;height: 300px;margin: 0 auto;}
-        .skills{margin-bottom: 20px;}
-        .experience{margin-top: 40px;margin-bottom: 40px;}
-        .self{margin-top: 40px;margin-bottom:40px;}
     </style>
 
 </head>
 
 <body>
-<div class="top">
-<div class="image"><img src="DSCF2888.JPG" width="125px" height="180px" alt="照片" /></div>
-<h1>你好<span>！</span></h1>
-<p class="myname">我是宋凡，我想应聘前端工程师</p>
-</div>
-<div class="mian">
- <div class="left">
- <h2>个人信息</h2>
-
-    <p>
-    <table>
-        <tr>
-            <td><b>姓名：</b>宋凡</td>
-            <td><b>性别：</b>男</td>
-        </tr>
-        <tr>
-            <td><b>籍贯：</b>陕西</td>
-            <td><b>民族：</b>汉</td>
-        </tr>
-    </table>
+<h1>个人简历</h1>
+<h2>个人信息</h2>
+<div>
+   <p>
+     <table>
+      <tr>
+        <td><b>姓名：</b>宋凡</td>
+        <td><b>性别：</b>男</td>
+      </tr>
+      <tr>
+        <td><b>籍贯：</b>陕西</td>
+        <td><b>民族：</b>汉</td>
+      </tr>
+</table>
     <b>&nbsp;&nbsp;&nbsp;毕业学校：</b>西安工程大学<br/>
     <b> &nbsp;&nbsp;&nbsp;学历：</b>本科<br/>
     <b>&nbsp;&nbsp;&nbsp;专业：</b>微电子学<br/>
@@ -54,9 +37,8 @@
     <b>&nbsp;&nbsp;&nbsp;邮箱：</b>1336468228@qq.com<br/>
     </p>
 </div>
-<div class="foot">
-<div class="right">
 <h2>求职意向</h2>
+<div >
     <table>
         <tr>
             <td><b>所属行业：</b>IT/计算机</td>
@@ -68,29 +50,20 @@
         </tr>
     </table>
 </div>
-</div>
-<div class="skills">
 <h2>职业技能</h2>
-    <ul type=none>
-        <li>熟练应用HTML网页技术，熟练css样式布局页面，了解JavaScript技术；</li>
-        <li>了解HTTP协议；</li>
-        <li>熟悉0ffice办公软件、CAD绘图、MySQL数据库；</li>
-        <li>熟悉平面设计软件；</li>
-        <li>了解盒子模型及其各种属性,懂得div+css页面布局</li>
-        <li>了解Firebug调试工具。</li>
-        <li>会使用GitHub上传源代码。</li>
-    </ul>
-
+<div>
+   <ol>
+       <li>1、熟练应用HTML网页技术，熟练css样式布局页面，了解JavaScript技术；</li>
+       <li>2、了解HTTP协议；</li>
+       <li>3、熟悉0ffice办公软件、CAD绘图、MySQL数据库；</li>
+       <li>4、熟悉平面设计软件；</li>
+       <li>5、了解盒子模型及其各种属性；</li>
+       <li>6、了解Firebug调试工具。</li>
+   </ol>
 </div>
-<div class="experience">
-<h2>工作经历</h2>
-<p>2014年一月至二月在苏州的连丰科技有限公司做流水线上进行空气净化器的组装，即要求速度，也要求质量。经常加班到九、十点。</p>
-    <p>2015年一月至二月在灞桥的半坡湖（温泉）酒店负责引导来酒店的顾客，为顾客引导路线并告知其在泡温泉的注意事项，保护好个人的人身财产安全。在值班期间未出现过一次罚款。</p>
-</div>
-<div class="self">
-<h2>自我评价</h2>
-    <p>对于未知事物和知识，始终保持初始不便的心态，去了解去学习，团队意识强烈，自学能力突出；继成了父辈吃苦耐劳的优良品性，为人正直。由于性格方面的原因，做事比较稳重 ；本人是外冷内热，但为人随和，与朋友相处比较融洽。</p>
-</div>
-</div>
+    <h2>自我评价</h2>
+        <div>
+           <p>对于未知事物和知识，始终保持初始不便的心态，去了解去学习，团队意识强烈，自学能力突出；继成了父辈吃苦耐劳的优良品性，为人正直，做事沉稳。</p>
+        </div>
 </body>
 </html>
